# FullStackPython_Flask_React_SQLite

./: README.md  pyproject.toml
backend/: main.py  models.py
backend/instance/: mydatabase.db
frontend/: package-lock.json
frontend/src/: App.css  App.jsx  ContactForm.jsx  ContactList.jsx
